[gd_scene load_steps=9 format=2]

[ext_resource path="res://image/menu/save_menu/save_back.png" type="Texture" id=1]
[ext_resource path="res://fonts/Play-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/menu/save_menu/save_menu.gd" type="Script" id=3]
[ext_resource path="res://image/menu/play_menu/under_button.png" type="Texture" id=4]
[ext_resource path="res://nodes/system/szene_changer.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "show_hint"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("hint:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hint:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 15.7831, 349.275 ), Vector2( 14.1013, 411.501 ) ]
}

[node name="save_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_back" type="Sprite" parent="."]
position = Vector2( 966.146, 535.642 )
scale = Vector2( 1.01401, 1.0327 )
texture = ExtResource( 1 )

[node name="text" type="Node2D" parent="."]

[node name="back" type="RichTextLabel" parent="text"]
margin_left = 180.282
margin_top = 940.455
margin_right = 302.282
margin_bottom = 997.455
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Back"
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="RichTextLabel" parent="text"]
margin_left = 58.7731
margin_top = 104.366
margin_right = 412.773
margin_bottom = 173.366
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Create new save"
text = "Create new save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hint" type="Label" parent="text"]
margin_left = 14.1013
margin_top = 411.501
margin_right = 364.101
margin_bottom = 520.501
rect_pivot_offset = Vector2( 79.0731, 74.0153 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "Save was loaded
 successfully"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ani" type="AnimationPlayer" parent="text"]
anims/show_hint = SubResource( 3 )

[node name="buttons" type="Node2D" parent="."]

[node name="back" type="TextureButton" parent="buttons"]
margin_left = 40.0
margin_top = 891.773
margin_right = 429.001
margin_bottom = 1041.77
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="TextureButton" parent="buttons"]
margin_left = 40.0
margin_top = 60.968
margin_right = 429.001
margin_bottom = 210.968
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll" type="ScrollContainer" parent="."]
margin_left = 491.0
margin_top = 49.0
margin_right = 1880.0
margin_bottom = 1037.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="scroll"]

[node name="szene_changer" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="mouse_entered" from="buttons/back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="buttons/back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="buttons/back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="buttons/save" to="." method="_on_save_mouse_entered"]
[connection signal="mouse_exited" from="buttons/save" to="." method="_on_save_mouse_exited"]
[connection signal="pressed" from="buttons/save" to="." method="_on_save_pressed"]
